[gd_scene load_steps=4 format=3 uid="uid://cy1xd2emwoirc"]

[ext_resource type="Script" path="res://scripts/bombshell_spike.gd" id="1_2lmx7"]
[ext_resource type="Texture2D" uid="uid://bygo3ctxud1ol" path="res://assets/sprites/bombshell spike.png" id="1_6vxcd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sfnp1"]
radius = 3.0

[node name="bombshell spike" type="CharacterBody2D"]
z_index = 10
collision_layer = 0
collision_mask = 0
script = ExtResource("1_2lmx7")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_sfnp1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1)
rotation = 0.785398
texture = ExtResource("1_6vxcd")

[node name="DestroyTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
